# office2pdf-MY

./: .gitignore  CLAUDE.md  PRD.md  README.md
crates/office2pdf/: Cargo.toml
crates/office2pdf/src/: lib_render_tests.rs  lib_robustness_tests.rs
crates/office2pdf/src/ir/: elements.rs  positioned_tests.rs  style.rs  style_tests.rs
crates/office2pdf/src/parser/: cond_fmt.rs  docx.rs  docx_context_table_style.rs  docx_contexts.rs  docx_foundation_tests.rs  docx_layout_rtl_tests.rs  docx_lists.rs  docx_media.rs  docx_sections.rs  docx_style_tests.rs  docx_styles.rs  docx_table_tests.rs  docx_tables.rs  docx_tests.rs  docx_text.rs  mod.rs  pptx.rs  pptx_background_image_tests.rs  pptx_background_ref_tests.rs  pptx_group_shape_tests.rs  pptx_image_tests.rs  pptx_placeholder_geometry_tests.rs  pptx_placeholder_style_tests.rs  pptx_placeholders.rs  pptx_shape_style_tests.rs  pptx_shapes.rs  pptx_slides.rs  pptx_table_style_tests.rs  pptx_table_tests.rs  pptx_tables.rs  pptx_tests.rs  pptx_text.rs  pptx_theme.rs  pptx_theme_tests.rs  wmf.rs  xlsx.rs  xlsx_cell_format_tests.rs  xlsx_cells.rs  xlsx_cond_fmt_raw.rs  xlsx_condfmt_tests.rs  (+4 more)
crates/office2pdf/src/render/: font_subst.rs  font_subst_tests.rs  pdf.rs  typst_gen.rs  typst_gen_advanced_tests.rs  typst_gen_diagram_visual_tests.rs  typst_gen_diagrams.rs  typst_gen_fixed_page_textbox_tests.rs  typst_gen_image_tests.rs  typst_gen_list_tests.rs  typst_gen_lists.rs  typst_gen_page_misc_tests.rs  typst_gen_paragraph_tests.rs  typst_gen_table_border_tests.rs  typst_gen_table_cell_content_tests.rs  typst_gen_tables.rs  typst_gen_tests.rs  typst_gen_text.rs  typst_gen_text_pipeline_tests.rs  typst_gen_visual_tests.rs
crates/office2pdf/tests/: bulk_conversion.rs  docx_fixtures.rs  perf_validation.rs  pptx_fixtures.rs  public_visual_audit.rs  xlsx_fixtures.rs
scripts/: check_visual_pr.py  (+1 more)
(+57 files in other folders)
